[workspace]
members = ["memory", "radar-dumper", "radar-reader", "radar-website", "vpk"]
resolver = "3"

[workspace.package]
version = "0.2.0"

[workspace.dependencies]
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.52.3", features = ["net", "rt-multi-thread"] }
tower-http = { version = "0.6.10", features = ["fs"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
crc32-v2 = "0.0.5"
chksum-hash-md5 = "0.0.1"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
] }

# local
memory = { path = "memory/" }
radar-dumper = { path = "radar-dumper/" }
radar-reader = { path = "radar-reader/" }
vpk = { path = "vpk/" }

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
